# LanChatRoom

./: CMakeLists.txt  chatroom.cpp  chatroom.h  chatroom.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  logo.rc  main.cpp  receivefile.cpp  receivefile.h  receivefile.ui  sendfile.cpp  sendfile.h  sendfile.ui
components/UdpServices/: UdpServer.cpp  UdpServer.h
components/fileTransfer/: FileReceiver.cpp  FileReceiver.h  FileReceiverMain.cpp  FileSender.cpp  FileSender.h  FileSenderMain.cpp  fileReceiver.rc  fileSender.rc  filetransfer.cpp  filetransfer.h  filetransfer.ui
tools/: FileConvert.cpp  FileConvert.h
